2000-12-12  Kingpin  <mthurn@tasc.com>

	* VERSION 2.21 RELEASED

2000-12-11  Kingpin  <mthurn@tasc.com>

	* HotBot.pm (native_setup_search): new URL for advanced search

2000-10-12  Kingpin  <mthurn@tasc.com>

	* VERSION 2.19 RELEASED

2000-10-11  Kingpin  <mthurn@tasc.com>

	* HotBot.pm (native_retrieve_some): added AM1=MC to all URLs in GUI mode

2000-06-26  Kingpin  <mthurn@tasc.com>

	* VERSION 2.18 RELEASED

	* test.pl: added test for multi-page gui_query

	* HotBot.pm: and "next" link in new place

	* HotBot.pm: fix for only one page of gui results

2000-05-24  Kingpin  <mthurn@tasc.com>

	* HotBot.pm: was missing first URL of native_query results

2000-05-17  Kingpin  <mthurn@tasc.com>

	* VERSION 2.16 RELEASED

	* HotBot.pm: was missing first URL of gui_query results

	* HotBot.pm: fix parsing when no "next" page of results

2000-04-03  Kingpin  <mthurn@tasc.com>

	* VERSION 2.15 RELEASED

	* HotBot.pm (gui_query): new arguments

2000-02-08  Kingpin  <mthurn@tasc.com>

	* VERSION 2.14 RELEASED!

	* HotBot.pm (native_retrieve_some): BUGFIX when no "next" button during GUI results

2000-02-07  Kingpin  <mthurn@tasc.com>

	* Makefile.PL (MY::postamble): add code for 'make update'

	* update: new program for updating parser test data (uses WWW::Search::Test)

	* test.pl: added parser test cases

2000-02-01  Kingpin  <mthurn@tasc.com>

	* VERSION 2.13 RELEASED	
	
2000-01-31  Kingpin  <mthurn@tasc.com>

	* HotBot.pm (native_retrieve_some): was missing title

Revision history for Perl extension WWW::Search::HotBot.

2.12  Fri Jan 21 13:07:24 2000
	- original version; created by h2xs 1.19
