@@ -1,11 +1,8 @@
 use ExtUtils::MakeMaker;
-# See lib/ExtUtils/MakeMaker.pm for details of how to influence
-# the contents of the Makefile that is written.
 WriteMakefile(
               'NAME' => 'WWW::Search::HotBot',
               'VERSION_FROM' => 'HotBot.pm',
               'PREREQ_PM' => {
-                              'WWW::Search' => 2.13,
+                              'WWW::Search::Test' => 2.16,
                              },
-);
-
+             );
