@@ -2,6 +2,7 @@
 # `make test'. After `make install' it should work as `perl test.pl'
 
 use ExtUtils::testlib;
+use WWW::Search::Test qw( new_engine run_gui_test run_test skip_test );
 
 ######################### We start with some black magic to print on failure.
 
@@ -20,125 +21,38 @@ print "ok 1\n";
 # (correspondingly "not ok 13") depending on the success of chunk 13
 # of the test code):
 
-my $iTest = 2;
+$WWW::Search::Test::iTest = 1;
 
-my $sEngine = 'HotBot';
-my $oSearch = new WWW::Search($sEngine);
-print ref($oSearch) ? '' : 'not ';
-print "ok $iTest\n";
-
-use WWW::Search::Test;
+&new_engine('HotBot');
 
 # goto GUI_TEST;
 # goto MULTI_TEST;
 my $debug = 0;
 
 # This test returns no results (but we should not get an HTTP error):
-$iTest++;
-$oSearch->native_query($WWW::Search::Test::bogus_query);
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-print STDOUT (0 < $iResults) ? 'not ' : '';
-print "ok $iTest\n";
-print STDERR "\n\n\n\n" if $debug;
-
+&run_test($WWW::Search::Test::bogus_query, 0, 0, $debug);
 # This query returns 1 page of results:
-$iTest++;
-my $sQuery = '+LS'.'AM +repl'.'ication +cor'.'e';
-$oSearch->native_query(
-                       WWW::Search::escape_query($sQuery),
-                         { 'search_debug' => $debug, },
-                      );
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-# print STDERR " + got $iResults results for $sQuery\n";
-if (($iResults < 2) || (49 < $iResults))
-  {
-  print STDERR " --- got $iResults results for $sQuery, but expected 2..49\n";
-  print STDOUT 'not ';
-  }
-print "ok $iTest\n";
-print STDERR "\n\n\n\n" if $debug;
+&run_test('+LS'.'AM +repl'.'ication +cor'.'e', 1, 99, $debug);
 
 # goto GUI_TEST;
 
 MULTI_TEST:
+&skip_test; goto GUI_TEST;
 # This query returns MANY pages of results:
-$iTest++;
-$sQuery = '"Bo'.'ss Na'.'ss"';
-$oSearch->native_query(
-                       WWW::Search::escape_query($sQuery),
-                      { 'search_debug' => $debug, },
-                      );
-$oSearch->maximum_to_retrieve(149); # 3 pages
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-# print STDERR " + got $iResults results for Bos","s Na","ss\n";
-if (($iResults < 101))
-  {
-  print STDERR " --- got $iResults results for $sQuery, but expected 101..\n";
-  print STDOUT 'not ';
-  }
-print "ok $iTest\n";
-print STDERR "\n\n\n\n" if $debug;
+&run_test('"Bo'.'ss Na'.'ss"', 101, undef, $debug);
 
 GUI_TEST:
+
 # This query returns 1 page of results:
-$iTest++;
-# $debug = 9;
-$sQuery = 'Ma'.'rtin AND Thu'.'rn AND Bi'.'ble AND Galo'.'ob';
-$oSearch->gui_query(
-                    WWW::Search::escape_query($sQuery),
-                      { 'search_debug' => $debug, },
-                   );
-$oSearch->maximum_to_retrieve(20);
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-print STDERR " + got $iResults GUI results for $sQuery, expected 1..10\n" if $debug;
-if (($iResults < 1) || (10 < $iResults))
-  {
-  print STDERR " --- got $iResults GUI results for $sQuery, but expected 1..10\n";
-  print STDOUT 'not ';
-  }
-print "ok $iTest\n";
-
+&run_gui_test('Ma'.'rtin AND Thu'.'rn AND Bi'.'ble AND Galo'.'ob', undef, 10, $debug);
 # This query returns 3 pages of results:
-$iTest++;
-# $debug = 9;
-$sQuery = 'ctil'.'etou';
-$oSearch->gui_query(
-                    WWW::Search::escape_query($sQuery),
-                      { 'search_debug' => $debug, },
-                   );
-$oSearch->maximum_to_retrieve(40);
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-print STDERR " + got $iResults GUI results for $sQuery, expected 21..30\n" if $debug;
-if (($iResults < 21) || (30 < $iResults))
-  {
-  print STDERR " --- got $iResults GUI results for $sQuery, but expected 21..30\n";
-  print STDOUT 'not ';
-  }
-print "ok $iTest\n";
-
+&skip_test; goto GUI_TEST3;
+&run_gui_test('ctil'.'etou', 31, 40, $debug);
+GUI_TEST3:
 # This query returns many pages of results:
-$iTest++;
-# $debug = 9;
-$sQuery = 'Jar Jar must die';
-$oSearch->gui_query(
-                    WWW::Search::escape_query($sQuery),
-                      { 'search_debug' => $debug, },
-                   );
-$oSearch->maximum_to_retrieve(30);
-@aoResults = $oSearch->results();
-$iResults = scalar(@aoResults);
-print STDERR " + got $iResults GUI results for $sQuery, expected 30..\n" if $debug;
-if ($iResults < 30)
-  {
-  print STDERR " --- got $iResults GUI results for $sQuery, but expected 30..\n";
-  print STDOUT 'not ';
-  }
-print "ok $iTest\n";
+&skip_test; goto GUI_TEST4;
+&run_gui_test('Jar Jar must die', 31, 40, $debug);
+GUI_TEST4:
 
 __END__
 
